<resources>
    <string name="app_name">NeuroMentor</string>
    <string name="how_old_are_you">Сколько Вам лет?</string>
    <string name="age">Возраст</string>
    <string name="continue_btn">Продолжить</string>
    <string name="your_gender">Ваш пол:</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="other">Другое…</string>
    <string name="what_is_your_name">Как Вас зовут?</string>
    <string name="your_name">Ваше имя</string>
    <string name="skip_btn">Пропустить</string>
    <string name="enter_your_age">Пожалуйста, введите свой возраст</string>
    <string name="enter_your_age_0_99">Пожалуйста, введите возраст от 0 до 99</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">Avatar</string>
    <string name="write_edit_text">Написать…</string>
    <string name="send_btn">Send</string>
    <string name="clear_context">Очистить контекст?</string>
    <string name="sure_txt">Вы уверены, что хотите очистить историю диалога? Это действие нельзя будет отменить.</string>
    <string name="cancel_btn">Отмена</string>
    <string name="clear_btn">Очистить</string>
    <string name="button_send_symbol">➤</string>
    <string name="connection_established">Соединение установлено</string>
    <string name="hello">Здравствуйте!</string>
    <string name="start_text">С чего начнем?</string>
    <string name="api_unavailable">Нет подключения к серверу</string>
    <string name="check_connection">Проверьте подключение к интернету и повторите попытку</string>
    <string name="retryer">Повторить</string>
    <string name="error_icon">Иконка ошибки</string>
</resources>